[package]
name = "xdg-desktop-portal-background"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.5.1", features = ["derive"] }
clap_derive = "=4.5.0"
configparser = { version = "3.0.4", features = ["async-std"] }
env_logger = "0.11.2"
log = "0.4.21"
log4rs = "1.3.0"
xdg = "2.5.2"
zbus = "4.1.2"
