[package]
name = "xdg-desktop-portal-background"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
clap_derive = "=4.5.0"
configparser = { version = "3.0.4", features = ["tokio", "async-std"] }
env_logger = "0.11.2"
log = "0.4.21"
log4rs = "1.3.0"
tokio = { version = "1.36.0", features = ["fs", "macros", "rt-multi-thread", "full"] }
zbus = { version = "4.1.2", features = ["tokio"] }

[profile.release]
lto = true
